--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -40,5 +40,10 @@
 
     <!-- Doze: should the pickup sensor be used as a pulse signal? -->
     <bool name="doze_pulse_on_pick_up">true</bool>
+
+    <!-- Pulse stroke width -->
+    <dimen name="config_pulsePathStrokeWidth">25dp</dimen>
+
+
 </resources>
 
